kyy-k8s-config/src/app/backend/go-api/go-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-api
  name: go-api
spec:
  replicas: 4
  strategy: {}
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - args:
            - --registry_address=consul-server-bootstrap:8500
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/api-web
          name: go-api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
