kyy-k8s-config/src/app/backend/go-api/go-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: go-api
  name: go-api
spec:
  rules:
    - host: '*.kaoyaya.com'
      http:
        paths:
          - backend:
              serviceName: go-api
              servicePort: 80
            path: /api/v1/
    - http:
        paths:
          - backend:
              serviceName: go-api
              servicePort: 80
            path: /api/v1/
